--- a/style.css
+++ b/style.css
@@ -37,14 +37,14 @@ p {
 .block-menu {
   margin: 1.5vw 0vw 1.5vw 2vw;
   width: 9.5vw;
-  height: 852px;
+  /* height: 852px; */
   background: #000000;
   border-radius: 1.5vw;
   display: flex;
   flex-direction: column;
   align-items: center; 
   justify-content: space-between;
-  box-shadow: 1.5vw 0 1.5vw rgba(180, 180, 180, 0.7);
+  box-shadow: 1.5vw 40px 1.5vw rgba(180, 180, 180, 0.7);
 }
 
 .menu {
@@ -213,13 +213,27 @@ p {
   margin-top: -16px;
 }
 
-.courses-menu > h3 {
-  margin-right: 2vw;
-  color: #000000;
-  opacity: 0.3;  
+.courses-menu > input {
+  display: none;
 }
 
-.courses-menu > h3:hover {
+.courses-menu > label {
+  margin-right: 2vw;
+  color: #000000;
+  opacity: 0.3; 
+}
+
+.courses-menu > label:hover {
+  color: #000000;
+  opacity: 1;
+}
+
+.courses-menu > label:active {
+  color: #000000;
+  opacity: 1;
+}
+
+.courses-menu input:checked + label {
   color: #000000;
   opacity: 1;
 }
@@ -242,6 +256,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 10px;
 }
 
 .courses-indicator p{
@@ -275,6 +290,7 @@ p {
   background: #F5F5F7;
   border: none;
   outline: none;
+  margin-left: 15px;
 }
 
 .bell {
@@ -390,4 +406,4 @@ p {
   margin-right: 3.5vw;
   width: 125px;
   height: auto;
-}
+} 
